; ModuleID = '/home/carl/AnghaBench/sway/sway/extr_commands.c_config_subcommand.c'
source_filename = "/home/carl/AnghaBench/sway/sway/extr_commands.c_config_subcommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmd_results = type { i32 }
%struct.cmd_handler = type { %struct.cmd_results* (i32, i8**)* }

@SWAY_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"Subcommand: %s\00", align 1
@CMD_INVALID = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [29 x i8] c"Unknown/invalid command '%s'\00", align 1
@.str.2 = private unnamed_addr constant [47 x i8] c"The command '%s' is shimmed, but unimplemented\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.cmd_results* @config_subcommand(i8** %0, i32 %1, %struct.cmd_handler* %2, i64 %3) #0 {
  %5 = alloca %struct.cmd_results*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.cmd_handler*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.cmd_handler*, align 8
  store i8** %0, i8*** %6, align 8
  store i32 %1, i32* %7, align 4
  store %struct.cmd_handler* %2, %struct.cmd_handler** %8, align 8
  store i64 %3, i64* %9, align 8
  %12 = load i8**, i8*** %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call i8* @join_args(i8** %12, i32 %13)
  store i8* %14, i8** %10, align 8
  %15 = load i32, i32* @SWAY_DEBUG, align 4
  %16 = load i8*, i8** %10, align 8
  %17 = call i32 @sway_log(i32 %15, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8* %16)
  %18 = load i8*, i8** %10, align 8
  %19 = call i32 @free(i8* %18)
  %20 = load i8**, i8*** %6, align 8
  %21 = getelementptr inbounds i8*, i8** %20, i64 0
  %22 = load i8*, i8** %21, align 8
  %23 = load %struct.cmd_handler*, %struct.cmd_handler** %8, align 8
  %24 = load i64, i64* %9, align 8
  %25 = call %struct.cmd_handler* @find_handler(i8* %22, %struct.cmd_handler* %23, i64 %24)
  store %struct.cmd_handler* %25, %struct.cmd_handler** %11, align 8
  %26 = load %struct.cmd_handler*, %struct.cmd_handler** %11, align 8
  %27 = icmp ne %struct.cmd_handler* %26, null
  br i1 %27, label %34, label %28

28:                                               ; preds = %4
  %29 = load i32, i32* @CMD_INVALID, align 4
  %30 = load i8**, i8*** %6, align 8
  %31 = getelementptr inbounds i8*, i8** %30, i64 0
  %32 = load i8*, i8** %31, align 8
  %33 = call %struct.cmd_results* @cmd_results_new(i32 %29, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0), i8* %32)
  store %struct.cmd_results* %33, %struct.cmd_results** %5, align 8
  br label %54

34:                                               ; preds = %4
  %35 = load %struct.cmd_handler*, %struct.cmd_handler** %11, align 8
  %36 = getelementptr inbounds %struct.cmd_handler, %struct.cmd_handler* %35, i32 0, i32 0
  %37 = load %struct.cmd_results* (i32, i8**)*, %struct.cmd_results* (i32, i8**)** %36, align 8
  %38 = icmp ne %struct.cmd_results* (i32, i8**)* %37, null
  br i1 %38, label %39, label %48

39:                                               ; preds = %34
  %40 = load %struct.cmd_handler*, %struct.cmd_handler** %11, align 8
  %41 = getelementptr inbounds %struct.cmd_handler, %struct.cmd_handler* %40, i32 0, i32 0
  %42 = load %struct.cmd_results* (i32, i8**)*, %struct.cmd_results* (i32, i8**)** %41, align 8
  %43 = load i32, i32* %7, align 4
  %44 = sub nsw i32 %43, 1
  %45 = load i8**, i8*** %6, align 8
  %46 = getelementptr inbounds i8*, i8** %45, i64 1
  %47 = call %struct.cmd_results* %42(i32 %44, i8** %46)
  store %struct.cmd_results* %47, %struct.cmd_results** %5, align 8
  br label %54

48:                                               ; preds = %34
  %49 = load i32, i32* @CMD_INVALID, align 4
  %50 = load i8**, i8*** %6, align 8
  %51 = getelementptr inbounds i8*, i8** %50, i64 0
  %52 = load i8*, i8** %51, align 8
  %53 = call %struct.cmd_results* @cmd_results_new(i32 %49, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.2, i64 0, i64 0), i8* %52)
  store %struct.cmd_results* %53, %struct.cmd_results** %5, align 8
  br label %54

54:                                               ; preds = %48, %39, %28
  %55 = load %struct.cmd_results*, %struct.cmd_results** %5, align 8
  ret %struct.cmd_results* %55
}

declare dso_local i8* @join_args(i8**, i32) #1

declare dso_local i32 @sway_log(i32, i8*, i8*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local %struct.cmd_handler* @find_handler(i8*, %struct.cmd_handler*, i64) #1

declare dso_local %struct.cmd_results* @cmd_results_new(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
